--- a/lab02_smithsonian_api/ex1_api_fetch_search/index.html
+++ b/lab02_smithsonian_api/ex1_api_fetch_search/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Major Studio 1 - Lab 2 – Fetch Search</title>
-</head>
-<body>
-  <script src="fetch_search.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Major Studio 1 - Lab 2 – Fetch Search</title>
+	</head>
+	<body>
+		<script type="module" src="fetch_search.js"></script>
+	</body>
 </html>
