--- a/quantitative/index.html
+++ b/quantitative/index.html
@@ -1,13 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="https://use.typekit.net/cdq0pjp.css" />
+		<title>App</title>
+	</head>
+	<body>
+		<div id="app"></div>
+		<h1>Who takes up space? Painted portraits in the NPG</h1>
+		<svg id="images-grid"></svg>
+		<script type="module" src="/main.js"></script>
+	</body>
 </html>
